lib: Made Array a value type
There is no reason to have refs for all arrays